--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,8 @@ textarea {
 }
 
 footer {
+    font-family: 'Permanent Marker', cursive;
+    color: #D1C6AD;
     background: #007CB2;
     color: #201E24;
 }
@@ -163,17 +165,15 @@ footer {
     display: block;
     position: relative;
     margin: auto;
+    padding:0;
  }
 
 .portfolio-text {
     position: absolute;
     top: 5em;
     z-index: 10;
-}
-
-.portfolio-text {
     box-sizing: border-box;
-    width: 100%;
+    width: auto;
     font-size: 1.25em;
     padding-top:.5em;
     padding-bottom:.5em;
@@ -182,6 +182,27 @@ footer {
 .portfolio-image {
     width: 18em;
     margin:1em auto;
+}
+
+.portfolio-description{
+    box-sizing:border-box;
+    opacity:0;  
+    position:absolute;      
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding:1.25em;
+    font-size:1.15em;
+    background:#201E24;
+    color:#D1C6AD;
+}
+.portfolio-description:hover{
+    opacity:1;
+}
+h4{
+    margin-bottom: .25em;
+    font-family: 'Permanent Marker', cursive;   
 }
 
 @media screen and (min-width:760px) {
@@ -224,11 +245,10 @@ footer {
         position: absolute;
         top: 4em;
         z-index: 10;
-    }
-    .portfolio-text {
         box-sizing: border-box;
         width: 100%;
     }
+
 }
 
 @media screen and (min-width:1024px) {
@@ -272,6 +292,7 @@ footer {
     h2 {
         margin-bottom: 1.25em;
     }
+    /* .portfolio-description, */
     .portfolio-image {
         width: 28em;
         margin-bottom: 1em;
@@ -281,4 +302,12 @@ footer {
         top: 8.5em;
         z-index: 10;
     }
+    .portfolio-description{
+        width: 100%;
+        
+
+    }
+    
+
 }
+
