--- a/assets/css/intro.css
+++ b/assets/css/intro.css
@@ -2,9 +2,14 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: #000;
+  background-image: url(../img/stars.jpg);
+  background-position: cover;
+  background-repeat: repeat;
+  /* background: #000; */
 }
-
+.intro-wrapper{
+  position: relative;
+}
 .opening {
   position: fixed;
   top: 25%;
@@ -16,12 +21,16 @@ body {
   width: 50%; 
   z-index: 10;
 }
-
+.logo{
+  position: absolute;
+  top:25%;
+  left:25%;
+}
 .logo img {
   width: 950px;
-  display: Block;
+  /* display: Block;
   margin: auto;
-  margin-bottom: 15%;
+  margin-bottom: 15%; */
   
 }
 
@@ -29,6 +38,7 @@ body {
   margin-top: 200px;
   margin-left: 4em;
   text-align: left;
+  position: absolute;
 
 }
 .enterSite a{
@@ -49,8 +59,8 @@ body {
 }
 
 .scale-out-center {
-  -webkit-animation: scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) 7.5s both;
-  animation: scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) 7.5s both;
+  -webkit-animation: scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) 5.5s both;
+  animation: scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) 5.5s both;
 }
 
 @-webkit-keyframes scale-out-center {
@@ -96,11 +106,13 @@ body {
 }
 
 .crawl {
+  margin-top:1200px;
   position: relative;
   top: 9999px;
   animation: crawl 90s linear;
-  animation-delay: 12s;
+  animation-delay: 3.5s;
   transform-origin: 50% 100%;
+  text-indent: 1em;
 }
 .crawl>.title {
   font-size: 90%;
