--- a/assets/css/intro.css
+++ b/assets/css/intro.css
@@ -34,14 +34,14 @@ body {
   
 }
 
-.fill{ 
+/* .fill{ 
   position: absolute;
   top:20%;
   left:10%
 
-}
+} */
  a{
- background-image: url("../img/rebel_blue.png");
+ /* background-image: url("../img/rebel_blue.png"); */
  background-size: 100%;
  background-repeat: no-repeat;
  color: #feda4a;
