--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,338 +1,29 @@
-.clearfix::after {
-    content: "";
-    display: block;
-    clear: both;
+*{
+    margin: 0;
+}
+html {
+    scroll-behavior: smooth;
+  }
+.text-effect{    
+    text-transform: uppercase;
+    /* font-weight: bold; */
+    font-family: 'Heebo', sans-serif;
+    color:rgb(255, 255, 255);
+    text-shadow: 
+    0 1px 0 #ccc, 
+    0 2px 0 #c9c9c9, 
+    0 3px 0 #bbb, 
+    0 4px 0 #b9b9b9, 
+    0 5px 0 #aaa, 
+    0 6px 1px rgba(0,0,0,.1), 
+    0 0 5px rgba(0,0,0,.1), 
+    0 1px 3px rgba(0,0,0,.3), 
+    0 3px 5px rgba(0,0,0,.2), 
+    0 5px 10px rgba(0,0,0,.25), 
+    0 10px 10px rgba(0,0,0,.2), 
+    0 20px 20px rgba(0,0,0,.15);
 }
 
-body {
-    background-image: url(../img/prism.png);
-}
-
-#masthead {
-    background: #201E24;
-    border-bottom: .25em solid #007CB2;
-}
-
-a {
-    text-decoration: none;
-}
-
-.name {
-    display: block;
-    font-family: 'Crimson Text', serif;
-    font-weight: 700;
-    font-size: 2.5em;
-    padding-top: .75em;
-    color: #007CB2;
-}
-
-.jtitle {
-    font-family: 'Permanent Marker', cursive;
-    color: #D1C6AD;
-    font-size: 1.75em;
-}
-
-.container {
-    text-align: center
-}
-.footer-container{
-    text-align: center;
-    padding:.75em;
-    font-size: 1.25em;
-}
-.footer-container a{
-    display: inline-block;
-    padding-left:.75em;
-}
-.footer-container a:visited {
-    color:#201E24
-}
-.footer-container a:hover{
-    color:#D1C6AD
-}
-.footer-container p{
-    display: inline-block;
-}
-nav {
-    font-family: 'Crimson Text', serif;
-    margin-bottom: .5em;
-    margin-top: .5em;  
-}
-
-nav a {
-    padding: 0 10px 0 1px;
-    border-right: 1px solid #008DD5;
-    color: #008DD5;
-}
-
-h2 {
-    font-family: 'Crimson Text', serif;
-    font-size: 1.75em;
-    text-align: center;
-    padding-top: .5em;
-    padding-bottom: .25em;
-    width: 80%;
-    margin: 0 auto;
-    border-bottom: .075em solid #D1C6AD;
-    color: #D1C6AD;
-}
-
-h3 {
-    color: #008DD5;
-    background: #201E24;
-    border: .15em solid #D1C6AD;
-    text-align: center;
-    font-family: 'Permanent Marker', cursive;
-
-}
-
-.main-wrapper {
-    min-height: calc(100vh - 60PX);
-}
-
-.about {
-    width: 80%;
-}
-
-.profile-image {
-    display: block;
-    margin: 0 auto;
-    padding-top: 1em;
-    width: 300px;
-}
-
-.about-text {
-    padding-top: 1.25em;
-    font-size: 1.25em;
-    line-height: 1.5em;
-    text-indent: 1em;
-    color: #D1C6AD
-}
-.about-text a{
-    color:#D1C6AD
-}
-.about-text a:hover{
-    color:#007CB2
-}
-.about-text a:visited{
-    color:#D1C6AD
-}
-.main-section {
-    background: #59656F;
-    border: 2px solid #D1C6AD;
-    width: 90%;
-    margin: 1.5em auto;
-}
-
-.about {
-    margin: 0 auto;
-}
-
-
-input[type=submit] {
-    width: 45%;
-    margin: 1.75em auto;
-    color: #007CB2;
-    border: .15em solid #007CB2;
-    font-family: 'Permanent Marker', cursive;
-    font-size: 1.25em;
-}
-
-input, textarea {
-    width: 100%;
-}
-
-label, input[type=submit] {
-    display: block;
-}
-
-form {
-    width: 80%;
-    margin: 0 auto;
-}
-
-label {
-    color: #D1C6AD;
-    padding-top: 1em;
-    padding-bottom: .25em;
-}
-
-input, textarea {
-    border: 3px solid #D1C6AD;
-}
-
-input {
-    height: 2em;
-}
-
-textarea {
-    height: 6em;
-}
-
-footer {
-    font-family: 'Permanent Marker', cursive;
-    color: #D1C6AD;
-    background: #007CB2;
-    color: #201E24;
-}
-
-.portfolio {
-    display: flex;
-    flex-wrap: wrap;
-    width: 80%;
-    margin: auto;
-    justify-content: space-between;
-    padding-bottom:100px;
-}
-
-.portfolio-item {
-    display: block;
+.wrapper{
     position: relative;
-    margin: auto;
-    padding:0;
- }
-
-.portfolio-text {
-    position: absolute;
-    top: 5em;
-    z-index: 10;
-    box-sizing: border-box;
-    width: auto;
-    font-size: 1.25em;
-    padding-top:.5em;
-    padding-bottom:.5em;
 }
-
-.portfolio-image {
-    width: 18em;
-    margin:1em auto;
-}
-
-.portfolio-description{
-    box-sizing:border-box;
-    opacity:0;  
-    position:absolute;      
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding:1.25em;
-    font-size:1.15em;
-    background:#201E24;
-    color:#D1C6AD;
-}
-.portfolio-description:hover{
-    opacity:1;
-    transition: .5s;
-    transition-timing-function: ease-in;
-}
-h4{
-    margin-bottom: .25em;
-    font-family: 'Permanent Marker', cursive;   
-}
-
-@media screen and (min-width:760px) {
-    #masthead {
-        display: block;
-    }
-    nav {
-        display: inline;
-        font-size: 1.25em;
-    }
-    .name {
-        display: inline;
-        font-size: 3rem;
-        padding-right: .5em;
-    }
-    .container {
-        padding-bottom: .8em;
-    }
-    .name-title {
-        display: block;
-        padding-top: .75em;
-        padding-bottom: .5em;
-    }
-    .about {
-        flex-direction: row;
-        margin: 0 auto;
-        padding-bottom: 1em;
-    }
-    .profile-image {
-        padding-right: 1em;
-    }
-    textarea {
-        height: 12em;
-    }
-    .portfolio-image {
-        width: 18em;
-        margin-bottom: 1em;
-    }
-    .portfolio-text {
-        position: absolute;
-        top: 4em;
-        z-index: 10;
-        box-sizing: border-box;
-        width: 100%;
-    }
-}
-
-@media screen and (min-width:1024px) {
-    .name-title {
-        display: inline-block;
-        background: #201E24;
-        margin: 0;
-        padding: 1.55em 1em;
-    }
-    .name {
-        font-size: 3.0em;
-        padding-right: .25em;
-    }
-    .jtitle {
-        font-size: 2em;
-    }
-    #masthead {
-        padding: 0;
-        background: #59656F;
-    }
-    .container {
-        padding-bottom: 0;
-        width: 80%;
-        text-align: left;
-        margin: auto;
-    }
-    nav a {
-        color: #D1C6AD;
-        border-color: #D1C6AD;
-        margin-left: .15em;
-        font-size: 1.15em;
-    }
-    .main-section {
-        width: 80%;
-    }
-    nav {
-        margin-top: 2em;
-        margin-left: .75em;
-        float: right;
-    }
-    h2 {
-        margin-bottom: 1.25em;
-    }
-    /* .portfolio-description, */
-    .portfolio-image {
-        width: 28em;
-        margin-bottom: 1em;
-    }
-    .portfolio-text {
-        position: absolute;
-        top: 8.5em;
-        z-index: 10;
-    }
-    .portfolio-description{
-        width: 100%;
-        
-
-    }
-    
-
-}
-
