--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -15,10 +15,11 @@
     position: absolute;
     bottom: 0;
     text-align: center;
+    color: black;
+    z-index: 500;
     padding-bottom: 1.25em;
     padding-top: 1.25em;
     width: 100%;
-    color: black;
     background-color: rgba(197, 182, 158, 0.8);
     -webkit-box-shadow: 0px -7px 23px 21px rgba(0, 0, 0, 0.55);
     box-shadow: 0px -7px 23px 21px rgba(0, 0, 0, 0.55);
@@ -35,12 +36,12 @@
 }
 
 .buttonGroup button {
+    font-size: 3em;
     background: none;
     border: none;
     margin-left: 1em;
     margin-right: 1em;
     font-family: 'Pirata One', cursive;
-    font-size: 3em;
 }
 
 .portNavBar {
@@ -85,15 +86,15 @@
     -webkit-box-shadow: 0px -7px 23px 21px rgba(0, 0, 0, 0.55);
     box-shadow: 0px -7px 23px 21px rgba(0, 0, 0, 0.55);
     border-bottom: .7em solid black;
-    padding: 1.5em;
+    padding: 1.15em;
     text-align: center;
 }
 
 .mainNav a {
     color: black;
     text-decoration: none;
-    font-size: 2.5em;
-    padding: 1.5em;
+    font-size: 2em;
+    padding: 1.25em;
 }
 
 .mainNav a:hover {
@@ -198,6 +199,49 @@
     right: 1em;
 }
 
+.projectOuterWrapper {
+    text-align: center;
+}
+
+.projectGroupWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.projectGroupWrapper .project {
+    width: 325px;
+}
+
+.projectGroupWrapper .project:hover {
+    width: 350px;
+    -webkit-box-shadow: -15px -15px 12px -8px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: -15px -15px 12px -8px rgba(0, 0, 0, 0.64);
+    box-shadow: -15px -15px 12px -8px rgba(0, 0, 0, 0.64);
+}
+
+.projectGroupWrapper .projectTitle {
+    font-size: 1.75em;
+    line-height: 1.25em;
+   
+}
+
+.projectGroupWrapper img {
+    width: 100%
+}
+
+.secTitle {
+    text-align: center;
+    padding-top: 1em;
+    padding-bottom: .5em;
+    font-size: 3em;
+    font-family: 'Pirata One', cursive;
+    border-bottom: 5px double #F0C336;
+    border-radius: 0px 0px 40px 40px;
+    width: 40%;
+    margin: auto;
+}
+
 .portMobile {
     display: none;
 }
@@ -276,7 +320,7 @@
         padding-left: .5em;
         font-size: 1.25em;
         font-family: 'Pirata One', cursive;
-    }    
+    }
     .buttonGroup {
         position: absolute;
         top: 50px;
@@ -287,7 +331,7 @@
         width: auto;
         background: none;
         box-shadow: none;
-        border: none;        
+        border: none;
         padding-bottom: .25em;
         padding-top: .25em;
     }
@@ -315,8 +359,8 @@
         opacity: 1;
         text-align: center;
     }
-    .project .aboutProject{
-        display:none;
+    .project .aboutProject {
+        display: none;
     }
     .aboutProject {
         opacity: 1;
@@ -341,7 +385,6 @@
         position: relative;
         margin-bottom: .5em;
     }
-   
     .portLinks:first-of-type {
         position: relative;
         text-align: left;
@@ -356,7 +399,8 @@
         box-shadow: 0;
     }
 }
-@media only screen and (max-width: 349px){
+
+@media only screen and (max-width: 349px) {
     .buttonGroup {
         font-size: .75em;
     }
