--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -7,10 +7,11 @@
     top: 2em;
     left: 2em;
     font-family: 'Pirata One', cursive;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .contactInfo button {
+    text-align: left;
     background: none;
     border: none;
     display: block;
