--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,66 @@
-*{
-    margin: 0;
+.section-wrapper{
+  height: 100vh;
 }
-html {
-    scroll-behavior: smooth;    
-  }
- body{
-   background-image: url("../img/vintage-concrete.png");
- }
-  footer{
-    margin-top: -5px;
-  }
-  p{
-    font-family: 'Gentium Book Basic', serif;
-  }
-
-.mobile{
-  display: none;
+header{
+  background-image: url("../img/intro.jpg");
+  background-size: cover;
+  background-color: cadetblue;
 }
-.text-effect{    
-    text-transform: uppercase;
-    /* font-weight: bold; */
-    font-family: 'Heebo', sans-serif;
-    color:rgb(255, 255, 255);
-    text-shadow: 
-    0 1px 0 #ccc, 
-    0 2px 0 #c9c9c9, 
-    0 3px 0 #bbb, 
-    0 4px 0 #b9b9b9, 
-    0 5px 0 #aaa, 
-    0 6px 1px rgba(0,0,0,.1), 
-    0 0 5px rgba(0,0,0,.1), 
-    0 1px 3px rgba(0,0,0,.3), 
-    0 3px 5px rgba(0,0,0,.2), 
-    0 5px 10px rgba(0,0,0,.25), 
-    0 10px 10px rgba(0,0,0,.2), 
-    0 20px 20px rgba(0,0,0,.15);
-    z-index: 1000;
+.about{
+  background-color: aquamarine;
+}
+.portfolio{
+  background-color: darkorange;
+}
+.contact{
+  background-color: lightseagreen;
+}
+footer{
+  background-color: lightslategrey;
 }
 
-.wrapper{
-    position: relative;
-}
-.mobile{
-  display: none;
+h1{
+
+  
 }
 
-@media only screen and (max-width: 749px){
-  .mobile{
-    display: block;
-  }
-  .full{
-    display: none;
-  }
+/* portfolio card */
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.9s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(-180deg);
 }
